<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/remote_pdf_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <EditText
        android:id="@+id/et_pdfUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remote_pdf_url"
        android:text="@string/sample_pdf_url"
        />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download"/>


    <es.voghdev.pdfviewpager.library.RemotePDFViewPager
        android:id="@+id/pdfViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>

