<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_sample2"
          android:title="@string/menu_sample2_txt"
        android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample3"
          android:title="@string/menu_sample3_txt"
          android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample4"
          android:title="@string/menu_sample4_txt"
          android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample5"
          android:title="@string/menu_sample5_txt"
          android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample8"
          android:title="@string/menu_sample8_txt"
          android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample9"
          android:title="@string/menu_sample9_txt"
          android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample10"
          android:title="@string/menu_sample10_txt"
          android:icon="@android:drawable/ic_media_play" />

    <item android:id="@+id/action_sample11"
          android:title="@string/menu_sample11_txt"
          android:icon="@android:drawable/ic_media_play" />

</menu>